@@ -7,6 +7,8 @@ p4a.ploneevent Changes
 p4a.ploneevent 0.x.x (Unreleased)
 =================================
 
+* Changed frequency DisplayList to an IntDisplayList for plone 4. (ggozad)
+
 * Added script to rebuild pot and resync all po files.  (saily)
 
 * Merged german translation from locales-included branch.  (saily)
